Massive refactor in order to prevent conflicts in PHP 7.2

--- a/tests/example.settings.ini
+++ b/tests/example.settings.ini
@@ -14,7 +14,7 @@ openstack.identity.username =
 openstack.identity.password =
 
 ;;;;;;;;;;;;;;;;;;
-; Object Storage ;
+; ObjectStoreObject Storage ;
 ;;;;;;;;;;;;;;;;;;
 
 ; Settings to work with swift:
