--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,10 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.4.0",
-    "guzzlehttp/guzzle": "~5.1"
+    "guzzlehttp/guzzle": "^6.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.1"
-  },
-  "support": {
-    "irc": "irc://irc.freenode.org/openstack-sdks",
-    "issues": "https://bugs.launchpad.net/openstack-sdk-php",
-    "forum": "https://ask.openstack.org/",
-    "wiki": "https://wiki.openstack.org/wiki/OpenStack-SDK-PHP",
-    "source": "http://git.openstack.org/cgit/stackforge/openstack-sdk-php"
   },
   "autoload": {
     "psr-4": {
