--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "require": {
     "php": ">=5.4.0",
-    "guzzlehttp/guzzle": "^6.3"
+    "guzzlehttp/guzzle": "5.3.4"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.1"
